[gd_scene load_steps=3 format=2]

[ext_resource path="res://scenes/SpecificationEditor/specification_editor.gd" type="Script" id=1]
[ext_resource path="res://scenes/SpecificationEditor/FieldEditor.tscn" type="PackedScene" id=2]

[node name="SpecificationEditor" instance=ExtResource( 2 )]
script = ExtResource( 1 )

[node name="HBoxContainer" parent="Panel/MarginContainer" index="0"]
margin_right = 505.0

[node name="Sections" type="OptionButton" parent="Panel/MarginContainer/HBoxContainer" index="0"]
margin_right = 101.0
margin_bottom = 60.0
text = "asdwadasfa"

[node name="PanelContainer" type="PanelContainer" parent="Panel/MarginContainer/HBoxContainer" index="1"]
margin_left = 105.0
margin_right = 505.0
margin_bottom = 60.0
rect_min_size = Vector2( 400, 0 )

[node name="LineEdit" type="LineEdit" parent="Panel/MarginContainer/HBoxContainer/PanelContainer" index="0"]
margin_left = 7.0
margin_top = 7.0
margin_right = 393.0
margin_bottom = 53.0
caret_blink = true
caret_blink_speed = 0.5

[connection signal="popup_hide" from="." to="." method="_on_SpecificationEditor_popup_hide"]
[connection signal="pressed" from="Panel/Cancel" to="." method="_on_Cancel_pressed"]
[connection signal="pressed" from="Panel/Apply" to="." method="_on_Apply_pressed"]
